Refactored local storage of tasks to TaskCollection, created enums, and updated logs for improved error handling